# smart_meditation_timer

./: .gitignore  README.md  main.py  meditation.kv  pyproject.toml
app/: main.py  meditation_screen.py  settings_screen.py  stats_screen.py
app/data/: app_data.json  datastore.py
app/meditation/: __init__.py  controller.py  states.py
app/screens/: __init__.py  meditation_screen.py  settings_screen.py  stats_screen.py
app/services/: controller.py  sounds.py  statistics.py
app/ui/: root.kv
app/ui/components/: duration_spinner.kv  legend_item.kv
app/ui/screens/: base_screen.kv  meditation_screen.kv  settings_screen.kv
app/widgets/: __init__.py  animated_circle.py
core/: storage.py  theme.py
data/: app_data.json  datastore.py  statistics.py
screens/: __init__.py  meditation_screen.py  settings_screen.py  stats_screen.py
services/: __init__.py  sounds.py
tests/: test_data_store.py  test_statistics.py
ui/: root.kv
ui/components/: finish_popup.kv  glass_button.kv  weekdays_row.kv
ui/screens/: base_screen.kv  settings_screen.kv  stats_screen.kv
widgets/: animated_circle.py
