[project]
name = "smart-meditation-timer"
version = "0.1.0"
description = ""
authors = [
    { name = "3D.tech" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 80
exclude = ["venv", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "C", "B", "I"]
ignore = ["E203"]
